infrastructure/production/moderation-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-api
  namespace: api
spec:
  selector:
    matchLabels:
      app: moderation-api
  template:
    metadata:
      labels:
        app: moderation-api
        log: tokafka
    spec:
      replicas: 1
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - moderation-api
                topologyKey: "topology.kubernetes.io/zone"
      containers:
        - name: moderation-api
          image: 807070170018.dkr.ecr.eu-central-1.amazonaws.com/ab3moderator:1.0.3-production.build.103
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "750Mi"
              cpu: "50m"
            limits:
              memory: "2048Mi"
              cpu: "500m"
      serviceAccount: moderation-api
