infrastructure/production/moderation-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-api
  labels:
    app: moderation-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: moderation-api
